# usb-relay-hid

./: .editorconfig  .gitattributes  .gitignore  README.md  make_release_linux.sh  make_release_osx.sh  make_release_win.bat
Test/: relay1-pulse.sh  test2m.py
commandline/: CMakeLists.txt  Makefile  README-hidusb-relay-cmd.txt  hiddata.c  hiddata.h  hiddata_libusb01.c  hiddata_mswin.c  hiddata_osx.c  hidusb-demo.sln  hidusb-relay-cmd(vc2008).vcproj  hidusb-relay-cmd(vc2013).vcxproj  hidusb-relay-cmd(vc2013).vcxproj.filters  hidusb-tool.h  relay1-pulse.sh  usbrelay-cmd.c
commandline/hidusb-relay-cmd.xcodeproj/: project.pbxproj
commandline/hidusb-relay-cmd.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
commandline/hidusb-relay-cmd.xcodeproj/project.xcworkspace/xcuserdata/mme.xcuserdatad/: UserInterfaceState.xcuserstate
commandline/hidusb-relay-cmd.xcodeproj/xcshareddata/xcschemes/: hidusb-relay-cmd.xcscheme
commandline/hidusb-relay-cmd.xcodeproj/xcuserdata/mme.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
commandline/hidusb-relay-cmd.xcodeproj/xcuserdata/mme.xcuserdatad/xcschemes/: xcschememanagement.plist
commandline/makemake/: Makefile
commandline/vsproj/: hidusb-demo(vc2013).sln  hidusb-relay-cmd(vc2008).vcproj  hidusb-relay-cmd(vc2013).vcxproj  hidusb-relay-cmd(vc2013).vcxproj.filters  hidusb-relay-cmd(vc2015).vcxproj  hidusb-relay-cmd(vc2017).vcxproj
doc/: Readme_USB-Relay-DLL.md  Readme_USB-Relay-DLL.txt  hidrelay.md
lib/: usb_relay_device.h  usb_relay_hw.h  usb_relay_lib.c
linux/: Makefile
qt/: qusbrelayproject.pro
(+42 files in other folders)
